Fix spacing on hr elements

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -156,9 +156,10 @@ h1, h2 {
 }
 
 hr {
-    border-top: 2px solid #fafafa;
+    border-bottom: 2px solid #fafafa;
     width: 75%;
     margin: auto;
+    padding-bottom: 5px;
 }
 
 #card-image {
@@ -460,7 +461,7 @@ footer p {
 
   #menu h2 {
     font-size: 50px;
-    padding: 10px;
+    padding: 5px;
     color: #fafafa;
   }
 
